--- a/styles/style.css
+++ b/styles/style.css
@@ -1,41 +1,67 @@
-@import url('https://fonts.googleapis.com/css?family=Sora');
-@import url('https://fonts.googleapis.com/css?family=Finger Paint');
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Sora");
+@import url("https://fonts.googleapis.com/css?family=Finger Paint");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap");
 
-html{
-  height: 100%;
-}
 body {
-  /* background-image: url("../images/Steinernes_Meer-min.jpg"); */
+  background-image: url("../images/Steinernes_Meer-min.jpg");
   background-repeat: no-repeat;
   background-color: #c4c4c4;
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  font-family: 'Sora';
+  font-family: "Sora";
   font-size: 20pt;
 }
 .container {
   background-color: hsla(0, 0%, 100%, 0.4);
   margin-top: 30px;
   border-radius: 15px;
-  padding: 20px;
+  padding: 15px;
+  text-align: center;
 }
-h1{
-  font-family: 'Finger Paint';
+h1 {
+  font-family: "Finger Paint";
   font-size: 38pt;
   font-weight: bold;
   line-height: 32pt;
   text-align: center;
-  margin: 60px;
+  margin: 40px;
 }
 .button-snap {
   background-color: green;
-  margin: 20px;
+  margin: 15px;
 }
 .camPanel {
   text-align: center;
 }
-canvas{
+.dontShow {
   display: none;
+}
+.show {
+  display: inline;
+}
+ul {
+  list-style-type: none;
+}
+
+h3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-weight: bold;
+  text-align: center;
+  font-variant: small-caps;
+  text-decoration: underline;
+  font-size: 38pt;
+}
+button {
+  margin: 10px;
+}
+#photo2 {
+  text-align: center;
+}
+#result {
+  font-weight: bold;
+  font-size: 38pt;
+  margin-bottom: 20px;
+  margin: 30px;
 }
