--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,11 @@ h1 {
   margin: 40px;
 }
 .button-snap {
-  background-color: green;
+  background-color: #008000;
   margin: 15px;
+  width: 250px;
+  height: 100px;
+  font-size: 18pt;
 }
 .camPanel {
   text-align: center;
@@ -60,8 +63,43 @@ button {
   text-align: center;
 }
 #result {
-  font-weight: bold;
+  font-weight: bolder;
   font-size: 38pt;
   margin-bottom: 20px;
   margin: 30px;
+}
+video {
+  margin-top: 20px;
+}
+h2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.inlineBlock {
+  display: inline-block;
+}
+.flex-container {
+  display: flex;
+  justify-content: space-around;
+}
+#playerValueImage,
+#computerValueImage {
+  height: 256px;
+  width: 256px;
+}
+.button {
+  font-size: 18pt;
+}
+#deleteCookies {
+  width: 220px;
+  height: 60px;
+}
+#replay {
+  width: 180px;
+  height: 60px;
+}
+#continue {
+  width: 200px;
+  height: 60px;
+  background-color: #008000;
 }
